--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="container">
-  <h1 class="">Welcome to Flyhigh Airlines!</h1>
+<!-- <div class="container">
+  <h1 class="text-center">Welcome to Flyhigh Airlines!</h1>
+  <a class="nav-link text-white btn btn-danger" routerLink="currencies">Currencies</a>
 </div>
+<div>
+  <router-outlet></router-outlet>
+</div> -->
+<h1>hello and welcome to Flyhigh Airlines</h1>
+<h1>{{dummyObj.Places[0].PlaceId}}</h1>
