--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,78 @@
 </div>
 <div>
   <router-outlet></router-outlet>
-</div> -->
-<h1>hello and welcome to Flyhigh Airlines</h1>
-<h1>{{dummyObj.Places[0].PlaceId}}</h1>
+</div> -->  
+<body>
+
+<h1 class="text-center">Welcome to Flyhigh Airlines</h1>
+
+<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita placeat hic quae odit vel rerum magnam quo voluptatem, aperiam sunt cupiditate. Natus sequi eligendi at minus fugit laboriosam maxime consequatur!
+</p>
+
+<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione magnam, iusto corrupti qui iste sint facilis rerum dignissimos maiores! Labore nam quas, nobis vitae facilis dignissimos libero atque voluptas. Illo.</p>
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <p>hellow rold</p>
+      <p>za warudo</p>
+      <br>
+      <br>
+      <img class="d-block w-100" src="../assets/airplane1.jpeg" style="height: 300px;" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../assets/airplane2.jpeg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../assets/airplane3.jpeg" alt="Third slide">
+    </div>
+  </div>
+</div>
+
+
+<!-- <table class="table display-5">
+  <tr>
+    <td><h1>ID of the flight : </h1></td>
+    <td><h1>{{dummyObj.id}}</h1></td>
+  </tr>
+  <tr>
+    <td><h1>Registration number of the flight : </h1></td>
+    <td><h1>{{dummyObj.reg}}</h1></td>
+  </tr>
+  <tr>
+    <td><h1>Status of the flight route:</h1></td>
+    <td>
+      <h1 *ngIf = "dummyObj.active; else Inactive">The flight route is still active </h1>  
+      <ng-template #Inactive><h1>The flight is not active</h1></ng-template>
+    </td>
+  </tr>
+</table> -->
+
+</body>
+<footer class="bg-dark text-white flex-wrap p-5 justify-content-between ">
+   
+  <h3 class="text-center">Thanks for choosing FlyHigh airlines!</h3>
+  <h3 class="text-center">Have a nice journey</h3>
+
+  <div>
+     
+          <h6>FlyHigh Inc.</h6>
+          <h6>Illinois</h6>
+          <h6>Chicago - 0560</h6>
+     
+  </div>
+  <div class="d-block">
+    <div>
+      <img src="../assets/undraw_aircraft_fbvl.svg" style="height:150px;" alt="">
+    </div>
+    <div >
+     
+      <h6>Flyhigh@gmail.com</h6>
+      <h6>+91 9982498234</h6>
+
+    </div>
+    
+  </div>
+
+
+</footer>
