--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
-<!-- <div class="container">
+ <!-- <div class="container">
   <h1 class="text-center">Welcome to Flyhigh Airlines!</h1>
   <a class="nav-link text-white btn btn-danger" routerLink="currencies">Currencies</a>
 </div>
 <div>
   <router-outlet></router-outlet>
-</div> -->  
-<body>
-
+</div> -->
 <h1 class="text-center">Welcome to Flyhigh Airlines</h1>
 
 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita placeat hic quae odit vel rerum magnam quo voluptatem, aperiam sunt cupiditate. Natus sequi eligendi at minus fugit laboriosam maxime consequatur!
@@ -14,23 +12,65 @@
 
 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione magnam, iusto corrupti qui iste sint facilis rerum dignissimos maiores! Labore nam quas, nobis vitae facilis dignissimos libero atque voluptas. Illo.</p>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<hr>
+<br>
+
+<div id="carouselExampleCaptions" class="carousel slide ms-5 me-5 mb-3" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <p>hellow rold</p>
-      <p>za warudo</p>
-      <br>
-      <br>
-      <img class="d-block w-100" src="../assets/airplane1.jpeg" style="height: 300px;" alt="First slide">
+      <img src="../assets/carousel-img-1.jpg" class="d-block mx-auto"  alt="">
+      <div class="carousel-caption d-none d-md-block">
+        <p class="lead">First image ...</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../assets/airplane2.jpeg" alt="Second slide">
+      <img src="../assets/carousel-img-2.jpg" class="d-block mx-auto" alt="">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../assets/airplane3.jpeg" alt="Third slide">
+      <img src="../assets/carousel-img-3.jpg" class="d-block mx-auto" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
     </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+
+
+
+<footer class=" bg-dark d-flex text-white p-5 justify-content-between ">
+   
+
+  <div>
+     
+          <h3>FlyHigh Inc.</h3>
+          <h3>Illinois</h3>
+          <h3>Chicago - 0560</h3>
+     
+  </div>
+    <div>
+      <h3 class="text-center">Thanks for choosing Flyhigh Airlines , have a great journey</h3>
+      <!-- <img  src="../assets/undraw_aircraft_fbvl.svg" style="height:30%;" alt=""> -->
+    </div>
+    <div >
+      <h3 >Reach us at : <a href="#">Flyhigh@gmail.com</a> </h3>
+      <h3 >Contact us : +91 9982498234</h3>
+
+    </div>
+</footer> 
 
 
 <!-- <table class="table display-5">
@@ -50,32 +90,3 @@
     </td>
   </tr>
 </table> -->
-
-</body>
-<footer class="bg-dark text-white flex-wrap p-5 justify-content-between ">
-   
-  <h3 class="text-center">Thanks for choosing FlyHigh airlines!</h3>
-  <h3 class="text-center">Have a nice journey</h3>
-
-  <div>
-     
-          <h6>FlyHigh Inc.</h6>
-          <h6>Illinois</h6>
-          <h6>Chicago - 0560</h6>
-     
-  </div>
-  <div class="d-block">
-    <div>
-      <img src="../assets/undraw_aircraft_fbvl.svg" style="height:150px;" alt="">
-    </div>
-    <div >
-     
-      <h6>Flyhigh@gmail.com</h6>
-      <h6>+91 9982498234</h6>
-
-    </div>
-    
-  </div>
-
-
-</footer>
