--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,91 +1,38 @@
- <!-- <div class="container">
-  <h1 class="text-center">Welcome to Flyhigh Airlines!</h1>
-  <a class="nav-link text-white btn btn-danger" routerLink="currencies">Currencies</a>
-</div>
-<div>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#" style="font-family: 'Roboto Slab', serif;">
+      <i class="fab fa-plane-departure"></i>
+      FlyHigh Airlines
+      </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" style="box-shadow: none;">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-family: 'Roboto', sans-serif;">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="contactus" routerLinkActive="active">ContactUs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="currencies" routerLinkActive="active">Flights</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container mb-5">
   <router-outlet></router-outlet>
-</div> -->
-<h1 class="text-center">Welcome to Flyhigh Airlines</h1>
-
-<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita placeat hic quae odit vel rerum magnam quo voluptatem, aperiam sunt cupiditate. Natus sequi eligendi at minus fugit laboriosam maxime consequatur!
-</p>
-
-
-<hr>
-<br>
-
-<div id="carouselExampleCaptions" class="carousel slide ms-5 me-5 mb-3" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../assets/carousel-img-1.jpg" class="d-block mx-auto"  alt="">
-      <div class="carousel-caption d-none d-md-block">
-        <p class="lead">First image ...</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="../assets/carousel-img-2.jpg" class="d-block mx-auto" alt="">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="../assets/carousel-img-3.jpg" class="d-block mx-auto" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
 
-
-
-<footer class=" bg-dark d-flex text-white p-5 justify-content-between ">
-   
-
-  <div>
-     
-          <h3>FlyHigh Inc.</h3>
-          <h3>Illinois</h3>
-          <h3>Chicago - 0560</h3>
-     
-  </div>
-    <div>
-      <h3 class="text-center">Thanks for choosing Flyhigh Airlines , have a great journey</h3>
-      <!-- <img  src="../assets/undraw_aircraft_fbvl.svg" style="height:30%;" alt=""> -->
-    </div>
-    <div >
-      <h3 >Reach us at : <a href="#">Flyhigh@gmail.com</a> </h3>
-      <h3 >Contact us : +91 9982498234</h3>
-
-    </div>
-</footer> 
-
-
-<!-- <table class="table display-5">
-  <tr>
-    <td><h1>ID of the flight : </h1></td>
-    <td><h1>{{dummyObj.id}}</h1></td>
-  </tr>
-  <tr>
-    <td><h1>Registration number of the flight : </h1></td>
-    <td><h1>{{dummyObj.reg}}</h1></td>
-  </tr>
-  <tr>
-    <td><h1>Status of the flight route:</h1></td>
-    <td>
-      <h1 *ngIf = "dummyObj.active; else Inactive">The flight route is still active </h1>  
-      <ng-template #Inactive><h1>The flight is not active</h1></ng-template>
-    </td>
-  </tr>
-</table> -->
+<!-- footer -->
+<app-footer class="mt-auto"></app-footer>
