--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
+@import url('../node_modules/font-awesome/css/font-awesome.min.css');
 .footer {
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: red;
     color: white;
     text-align: center;
-    height: 200px;
- }
+    background-color: black;
+}
+body{
+    background:linear-gradient(to right ,white, lightblue, lightblue ,skyblue);
+}
